# DataStructure

./: CMakeLists.txt  main.c
3.Stack/: infixToPrefix.c  stackByHoff.h
3.Stack/ExpressionConvert/: infixToPostfix.c  infixToPrefix.c  newStack.h  prefixToInfix.c
LinkedList/: charDoubleLinkedListByHoff.h  doubleLinkedListByHoff.h  linkedList.c  linkedListByHoff.h  singleLinkedListByHoff.h
Stack/: stack.c  stackByHoff.h  stringStack.c  stringStackByHoff.h
Tree/: binarySearchTreeByHoff.h  tree.c
Vector/: vector.c  vectorByHoff.h
